second commit with SL images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                                      <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="supportus.html">
                                          <i class="fa fa-credit-card"></i>
-                                         Support Us</a></li>
+                                         Support XX</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -61,8 +61,8 @@
                       </div>
 
                 <div class="mobile-head shado-1 visible-xs">
-                        <img style="width:50px;" class="logo" src="assets/images/logo.jpg">
-                            <h1 style="width:70%">Thankam Foundation</h1>
+                        <img style="width:50px;" class="logo" src="assets/images/logo.png">
+                            <h1 style="width:70%">Sri Lanka Association of Ireland (SlaÉire)</h1>
                             <b style="margin-left: 4px;">social awareness foundation</b>
 
                             <i onclick="showSM()" class="fa fa-navicon smal-menu-ico cp"></i>
@@ -76,14 +76,14 @@
 
                               <div class="container">
                                 <div style="height: 94px; overflow: hidden" class="col-md-4 col-sm-12">
-                                     <img style="width:90px;" class="logo" src="assets/images/logo.jpg">
+                                     <img style="width:90px;" class="logo" src="assets/images/logo.png">
                                     <h1 style="width:70%">SlaÉire</h1>
                                      <b style="margin-left: 4px;">Sri Lanka Association of Ireland</b>
                                  </div>
                                   <div style="height: 94px; overflow: hidden"  class="col-md-8 hidden-sm">
 
 
-                                      <button data-toggle="modal" data-target="#myModal" class="btn btn-sm btn-donat"><i class="fa fa-inr"></i> Donate Now</button>
+                                      <!--button data-toggle="modal" data-target="#myModal" class="btn btn-sm btn-donat"><i class="fa fa-inr"></i> Donate Now</button-->
 
                                         <ul class="top-right">
                                                 <li ><i class="fa fa-linkedin-square"></i></li>
@@ -97,8 +97,8 @@
                                             </ul>
 
                                             <div class="exu">
-                                               <i class="fa fa-phone"></i> :  +91 9442719300
-                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  info@thankamfoundation.org
+                                               <i class="fa fa-phone"></i> :  +353 123456789
+                                                <i style="margin-left: 30px;" class="fa fa-envelope"></i> :  infoslaeire@gmail.com
                                             </div>
                                   </div>
 
@@ -126,7 +126,7 @@
 
                                      <li  onclick="hideSM()" class="mom" id="mm3" onclick="changeSelect(3)"  > <a href="supportus.html">
                                          <i class="fa fa-credit-card"></i>
-                                         Support Us</a></li>
+                                         Support XX2</a></li>
                                      <li onclick="hideSM()" class="mom" id="mm4" onclick="changeSelect(4)"  > <a href="gallery.html">
                                         <i class="fa fa-photo"></i>
                                          Gallery</a></li>
@@ -213,9 +213,9 @@
      <div class="item">
       <img src="assets/images/b3.jpg" alt="...">
       <div class="carousel-caption">
-        <h2 class="fevf">Provide Eduction to All</h2>
-          <h2 class="fevf">We provide Eduction to 250 Students Join with us  </h2>
-          <strong class="ssstitle">provide more support to them</strong>
+        <h2 class="fevf">Discover Ireland</h2>
+          <!--h2 class="fevf">We provide Eduction to 250 Students Join with us  </h2-->
+          <strong class="ssstitle">explore immigration, employment, education, accommodation, driving and travel</strong>
       </div>
     </div>
 
@@ -225,9 +225,9 @@
        <div class="item">
       <img src="assets/images/b2.jpg" alt="...">
       <div class="carousel-caption">
-        <h2 class="fevf">Christian Development Scheme</h2>
-          <h2 class="fevf">We provide Eduction to 250 Students Join with us </h2>
-          <strong class="ssstitle">provide more support to them</strong>
+        <h2 class="fevf">Discover Sri Lanka</h2>
+          <!--h2 class="fevf">We provide Eduction to 250 Students Join with us </h2-->
+          <strong class="ssstitle">explore the rich history and the unique culture of the island nation of Sri Lanka</strong>
       </div>
     </div>
 
@@ -235,9 +235,9 @@
   <div class="item active">
       <img src="assets/images/b1.jpg" alt="...">
       <div class="carousel-caption">
-            <h2 class="fevf">Childrens Development Scheme</h2>
-          <h2 class="fevf">We provide Eduction to 250 Students Join with us </h2>
-          <strong class="ssstitle">provide more support to them.</strong>
+            <h2 class="fevf">SlaÉire provide a forum for its community to promote</h2>
+          <!--h2 class="fevf">We provide Eduction to 250 Students Join with us </h2-->
+          <strong class="ssstitle">social, cultural, educational, and recreational activities.</strong>
       </div>
     </div>
 
@@ -275,7 +275,7 @@
                     <div class="widget-box-inner">
 <div class="round"><a class="inner" href="#"><i class="fa fa-users"></i></a></div>
 <h2>Join Volunteer</h2>
-<p>Since 13-3-2015, Thankam Foundation has placed 19,869 volunteers in 22 programs around the world alongside empowering grassroots community projects. </p>
+<p>Since 13-3-2015, Sri Lanka Association of Ireland (SlaÉire) has placed 19,869 volunteers in 22 programs around the world alongside empowering grassroots community projects. </p>
 </div>
 
                 </div>
@@ -593,7 +593,7 @@ aim of involving in social charitable, religious, promotional, educational and c
          <div class="col-sm-3">
             <b>Address</b>
 
-             <p style="font-size:15px;">Thankam Foundation<br>
+             <p style="font-size:15px;">Sri Lanka Association of Ireland (SlaÉire)<br>
 
               1st Floor, Opp Padma Hospital <br>
 
@@ -601,7 +601,7 @@ aim of involving in social charitable, religious, promotional, educational and c
 
                   K.K District, Tamilnadu <br>
 
-                email:info@thankamfoundation.org
+                email:infoslaeire@gmail.com
  <br>
 
              </p>
@@ -625,7 +625,7 @@ aim of involving in social charitable, religious, promotional, educational and c
 
      <div class=" smarti">
             <div class="container">
-            <p>All Rights Reserved &copy; Thankam Foundation | Designed &amp; Developed By Smarteye
+            <p>All Rights Reserved &copy; Sri Lanka Association of Ireland (SlaÉire)
 
                 <i class="fa fa-twitter fico-s hidden-xs"></i>
                  <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
@@ -645,7 +645,7 @@ aim of involving in social charitable, religious, promotional, educational and c
          </div>
         </div>
 
-    </footer>
+    </footer-->
 
 
 
